--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
 	<meta name="keywords" content="Multi-Device interaction, data visualization, smartwatches">
   	<meta name="description" content="Unified Smartwatch Multi-Device Applications Browser">
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-	<title>Unified Smartwatch Multi-Device Applications Browser</title>
+	<title>Smartwatch Multi-Device Systems Survey</title>
 	<link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
 	<div class="container">
-		<h1>Unified Smartwatch Multi-Device Applications Browser</h1>
-		<h2>A Survey on Applications Involving Multi-Device Interaction with Smartwatches</h2>
+		<h1>Smartwatch Multi-Device Systems Survey</h1>
 		<div id="elastic-list"></div>
 		<p id="results-count" class="results-title">Results:</p>
 		<div id="results"></div>
